Fix js pipiline and grunt hook

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,14 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/bootstrap-datepicker3.css">
+    <link rel="stylesheet" href="/styles/bootstrap-theme.css">
+    <link rel="stylesheet" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="/styles/dashboard.css">
+    <link rel="stylesheet" href="/styles/font-awesome.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/signin.css">
     <!--STYLES END-->
   </head>
 
@@ -81,57 +88,57 @@
               <% } %>
               
               <%if (menu == 'agents') { %>
-                <li class="active"><a href="/agents">Представители<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/agents">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/agents">Представители</a></li>
+                <li><a href="/agents">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
   
               <%if (menu == 'nets') { %>
-                <li class="active"><a href="/nets">Аптечные сети<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/nets">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/nets">Аптечные сети</a></li>
+                <li><a href="/nets">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'contracts') { %>
-                <li class="active"><a href="/contracts">Контракты<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/contracts">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/contracts">Контракты</a></li>
+                <li><a href="/contracts">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'categories') { %>
-                <li class="active"><a href="/categories">Категории аптеки<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/categories">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/categories">Категории аптеки</a></li>
+                <li><a href="/categories">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
 
               <%if (menu == 'places') { %>
-                <li class="active"><a href="/places">Места расположения<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/places">пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/places">Места расположения</a></li>
+                <li><a href="/places">пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'positions') { %>
-                <li class="active"><a href="/positions">Должности сотрудников<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/positions">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/positions">Должности сотрудников</a></li>
+                <li><a href="/positions">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'regions') { %>
-                <li class="active"><a href="/regions">Районы городов<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/regions">пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/regions">Районы городов</a></li>
+                <li><a href="/regions">пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'subways') { %>
-                <li class="active"><a href="/subways">Станции метро<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/subways">пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/subways">Станции метро</a></li>
+                <li><a href="/subways">пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>  
               
               <%if (menu == 'listedhospitals') { %>
-                <li class="active"><a href="/listedhospitals">Больницы для списка<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/listedhospitals">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/listedhospitals">Больницы для списка</a></li>
+                <li><a href="/listedhospitals">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
             <% } %>
 
@@ -140,45 +147,45 @@
             <%if (typeof menu !== 'undefined') { %>        
 
               <%if (menu == 'drugbrands') { %>
-                <li class="active"><a href="/drugbrands">Бренды препаратов<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/drugbrands">пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/drugbrands">Бренды препаратов</a></li>
+                <li><a href="/drugbrands">пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'drugskus') { %>
-                <li class="active"><a href="/drugskus">SKU препаратов<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/drugskus">SKU пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/drugskus">SKU препаратов</a></li>
+                <li><a href="/drugskus">SKU пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'worktypes') { %>
-                <li class="active"><a href="/worktypes">Виды работ на визите<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/worktypes">пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/worktypes">Виды работ на визите</a></li>
+                <li><a href="/worktypes">пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'promotions') { %>
-                <li class="active"><a href="/promotions">Акции на визите<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/promotions">пїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/promotions">Акции на визите</a></li>
+                <li><a href="/promotions">пїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'messagetypes') { %>
-                <li class="active"><a href="/messagetypes">Типы сообщений<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/messagetypes">пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/messagetypes">Типы сообщений</a></li>
+                <li><a href="/messagetypes">пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'phototypes') { %>
-                <li class="active"><a href="/phototypes">Типы фотографий<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/phototypes">пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/phototypes">Типы фотографий</a></li>
+                <li><a href="/phototypes">пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
               
               <%if (menu == 'materials') { %>
-                <li class="active"><a href="/materials">Матералы для показа<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/materials">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ<span class="sr-only">(current)</span></a></li>
               <% } else { %>
-                <li><a href="/materials">Матералы для показа</a></li>
+                <li><a href="/materials">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</a></li>
               <% } %>
 
             <% } %>
@@ -219,7 +226,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+    <script type="text/javascript" src="/jst.js"></script>
     <!--TEMPLATES END-->
 
 
@@ -253,6 +260,22 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/bootstrap-datepicker.js"></script>
+    <script src="/js/dependencies/bootstrap-datepicker.ru.min.js"></script>
+    <script src="/js/angular/app.module.js"></script>
+    <script src="/js/angular/factories/dataservice.js"></script>
+    <script src="/js/angular/factories/lodash.js"></script>
+    <script src="/js/angular/directives/datepicker.js"></script>
+    <script src="/js/angular/directives/modal.js"></script>
+    <script src="/js/angular/directives/pageWithTiles.js"></script>
+    <script src="/js/angular/directives/popover.js"></script>
+    <script src="/js/angular/controllers/AgentController.js"></script>
+    <script src="/js/angular/controllers/DrugBrandController.js"></script>
+    <script src="/js/angular/controllers/DrugSKUController.js"></script>
+    <script src="/js/angular/controllers/ListedHospitalController.js"></script>
+    <script src="/js/angular/controllers/MaterialController.js"></script>
+    <script src="/js/angular/controllers/PositionController.js"></script>
+    <script src="/js/angular/controllers/WorkTypeController.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
